--- a/src/Whiteboard/index.css
+++ b/src/Whiteboard/index.css
@@ -1,7 +1,40 @@
-path {
+.my-path {
   fill: none;
-  stroke: #000;
-  stroke-width: 3px;
   stroke-linejoin: round;
   stroke-linecap: round;
+}
+
+.whiteboard-background {
+  fill: black;
+  width: 100%;
+  height: 100%;
+  stroke: black;
+  stroke-width: 5px;
+}
+
+.whiteboard-button {
+  position: absolute;
+  top: 10px;
+  left: 30px;
+}
+
+.whiteboard-popover-container {
+  text-align: center;
+}
+
+.ant-popover-inner-content {
+  padding: 0px !important;
+  padding-bottom: 5px !important;
+}
+
+.whiteboard-slider {
+  padding: 10px;
+}
+
+.whiteboard-download-btn {
+
+}
+
+.sketch-picker {
+  box-shadow: none !important;
 }
